basic unchecked messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 project (test)
 cmake_minimum_required (VERSION 2.6)
 
-include (../sagase-cmake/Sagase.cmake)
+include (Sagase.cmake)
 
 include (FindQt4)
 find_package (Qt4 4.6 COMPONENTS QtCore QtGui QtNetwork REQUIRED)
