adding acking, dup-checking, encoding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable (test
     llstack/messageid.cpp
     llstack/provider.cpp 
     llstack/moc_provider.cpp
+    llstack/zerocode.cpp
     moc_xmlrpc.cpp
     moc_capabilities.cpp
     moc_application.cpp
