--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ add_executable (test
     llstack/messageid.cpp
     llstack/provider.cpp 
     llstack/moc_provider.cpp
-    llstack/zerocode.cpp
+    llstack/datacoding.cpp
     moc_xmlrpc.cpp
     moc_capabilities.cpp
     moc_application.cpp
